<resources>
    <string name="app_name">Shopping List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="reg_user">Username:</string>
    <string name="reg_email">Email:</string>
    <string name="reg_pass">Password:</string>
    <string name="welcome">WELCOME</string>
    <string name="wel_default_user">USERX</string>
    <string name="new_list">NEW \nLIST</string>
    <string name="see_lists">SEE \nMY LISTS</string>
    <string name="new_list_ok">OK</string>
    <string name="list_title">List title</string>
    <string name="new_list_default_title">TITLE</string>
    <string name="new_list_share">Share list</string>
    <string name="rad_yes">Yes</string>
    <string name="rad_no">No</string>
    <string name="save_list">SAVE</string>
    <string name="list_row_shared">Shared:</string>
    <string name="list_row_title">Naslov:</string>
    <string name="show_list_add">ADD</string>
    <string name="show_list_task_title">Task title</string>
    <string name="empty_view_text">No lists to show.</string>
    <string name="home">HOME</string>
    <string name="see_shared_lists">SEE SHARED LISTS</string>
    <string name="refresh">REFRESH</string>
</resources>