<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment"
    android:orientation="vertical"
    android:id="@+id/lay_reg"
    >

    <LinearLayout

        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/reg_user"
        />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:inputType="text"
            android:hint="@string/user"
            android:id="@+id/user_reg" />

    </LinearLayout>

    <LinearLayout

        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/reg_email"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:inputType="text"
            android:hint="@string/email"
            android:id="@+id/email_reg" />

    </LinearLayout>

    <LinearLayout

        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/reg_pass"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:inputType="textPassword"
            android:hint="@string/pass"
            android:id="@+id/pass_reg" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:id="@+id/but_reg_2"
        />

    <!-- TODO: Update blank fragment layout -->

</LinearLayout>