<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textSize="30dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/wel_default_user"
        android:id="@+id/wel_user"
        android:textSize="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/lay_wel"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_list"
            android:layout_weight="1"
            android:id="@+id/but_new_list"
            android:backgroundTint="@color/teal_200"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/see_lists"
            android:layout_weight="1"
            android:id="@+id/but_see_lists"
            android:backgroundTint="@color/teal_200"
            android:enabled="false"
            />

    </LinearLayout>

</LinearLayout>